--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Oscar Pérez <mr.omiguelperez@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-watch": "^2.0.6",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "mongodb": "^2.2.28",
     "mongoose": "^4.10.2"
   }
 }
